--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+SistemaLanchonete/nbproject/project.properties
+SistemaLanchonete/nbproject/project.xml
+SistemaLanchonete/nbproject/private/private.properties
+SistemaLanchonete/nbproject/genfiles.properties
+SistemaLanchonete/build/classes/.netbeans_update_resources
+SistemaLanchonete/build/classes/.netbeans_automatic_build
