--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ SistemaLanchonete/nbproject/private/private.properties
 SistemaLanchonete/nbproject/genfiles.properties
 SistemaLanchonete/build/classes/.netbeans_update_resources
 SistemaLanchonete/build/classes/.netbeans_automatic_build
+SistemaLanchonete/nbproject/private/private.xml
